[build-system]
requires = ["setuptools", 
            "wheel", 
            "setuptools_scm"]  # Build requirements

build-backend = "setuptools.build_meta"

[project]
version = "0.01b"
name = "PBsim" 
description = "A Python package for N-body hydrodynamic simulations of early universe dynamics and primordial black hole formation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tanay", email = "Tanayvajhala@gmail.com" },
]
keywords = ["PBHs", "Hydrodynamics", "Simulations", "Early Universe"]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "cupy",
    "matplotlib"
]

[project.urls]
"Source" = "https://github.com/Learning-Operator/pbsim"
"Issues" = "https://github.com/Learning-Operator/pbsim/issues"


[tool.setuptools_scm]
write_to = "pbsim/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
exclude = ["output"]
