[build-system]
requires = ["setuptools", 
            "wheel", 
            "setuptools_scm"]  # Build requirements

build-backend = "setuptools.build_meta"

[project]
version = "1.0"
name = "PBsim" 
description = "A Python package for N-body hydrodynamic simulations of early universe dynamics and primordial black hole formation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Tanay", email = "Tanayvajhala@gmail.com" },
]
keywords = ["PBHs", "Hydrodynamics", "Simulations", "Early Universe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries"
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
    "cupy",
    "matplotlib"
]

[project.urls]
"Source" = "https://github.com/Learning-Operator/pbsim"
"Issues" = "https://github.com/Learning-Operator/pbsim/issues"


[tool.setuptools_scm]
write_to = "pbsim/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
exclude = ["output", "old"]
where = ["."]
